--- a/TEST22.html
+++ b/TEST22.html
@@ -3,6 +3,6 @@
 <title>second page</title>
 </head>
 <body>
-  我的第二個網頁,返回<a href="tes.html">首頁</a>
+  我的第二個網頁,返回<a href="test.html">首頁</a>
 </body>
 </html>
